--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -29,8 +29,8 @@ h1{
 }
 
 h2{
-    text-align: center;
     font-size: 25px;
+    text-align: center;
 }
 
 h2{
@@ -62,3 +62,5 @@ h3{
 .titulo-verde{
     background-color: #c1dab8;
 }
+
+@media (min-width: 768px){  body{font-size: 18px;}}
